--- a/HLImageTag/Base.lproj/Main.storyboard
+++ b/HLImageTag/Base.lproj/Main.storyboard
@@ -19,15 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TGL-Zy-cGd" customClass="UIImage_Tag" customModule="HLImageTag" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="-562.5" y="-87.5" width="1500" height="842"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TGL-Zy-cGd" secondAttribute="bottom" id="5In-gA-JAu"/>
-                            <constraint firstItem="TGL-Zy-cGd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hzu-bx-1li"/>
-                            <constraint firstItem="TGL-Zy-cGd" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LlT-vh-zna"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TGL-Zy-cGd" secondAttribute="trailing" id="oH2-PL-8tS"/>
+                            <constraint firstItem="TGL-Zy-cGd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KT4-Ht-AS2"/>
+                            <constraint firstItem="TGL-Zy-cGd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mBV-Tz-kuj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
